Added ManageContactInformationUtils tests